--- a/app/views/transaction/index.html.erb
+++ b/app/views/transaction/index.html.erb
@@ -1,17 +1,17 @@
 <h1> All Transactions </h1>
 
-<ul>
 
-  <p> <%= @txs.size %> items</p>
+<p> <%= @txs.size %> items</p>
+<table>
   <% @txs.each do |tx| %>
-    <li>
-      <%= tx.trx_date %>
-      <%= tx.trx_type %>
-      <%= tx.district %>
-      <%= tx.rcount %>
-      <%= tx.resident_area %>
-      <%= tx.total_area %>
-      <%= tx.updated_at %>
-    </li>
-    <% end %>
-</ul>
+    <tr>
+      <td>      <%= tx.trx_date %>       </td>
+      <td>      <%= tx.trx_type %>             </td>
+      <td>      <%= tx.district %>             </td>
+      <td>      <%= tx.rcount %>               </td>
+      <td>      <%= tx.resident_area %>        </td>
+      <td>      <%= tx.total_area %>           </td>
+      <td>      <%= tx.updated_at %>           </td>
+    </tr>
+  <% end %>
+</table>
