--- a/app/views/transaction/chart.html.erb
+++ b/app/views/transaction/chart.html.erb
@@ -1,4 +1,5 @@
 <canvas id="myChart" width="400" height="400"></canvas>
+<h3>近日行情</h3>
 <p>info --<%= @info %></p>
 <script>
   function parseLabels(str) {
@@ -20,12 +21,12 @@
       labels: _labels,
       datasets: [
         {
-          label: 'new',
+          label: '商品房',
           borderColor: "rgba(75,192,192,1)",
           data: _rnew
         },
         {
-          label: 'second',
+          label: '二手房',
           borderColor: 'rgba(255, 206, 86, 1)',
           data: _rsecond
         }]
