--- a/app/views/transaction/chart.html.erb
+++ b/app/views/transaction/chart.html.erb
@@ -1,6 +1,6 @@
 <canvas id="myChart" width="400" height="400"></canvas>
 <h3>近日行情</h3>
-<p>info --<%= @info %></p>
+<info %></p>
 <script>
   function parseLabels(str) {
     str.split("&quot;");
